# brandinator

./: .dockerignore  .gitignore  Dockerfile  PROMPT_TEMPLATE.md  README.md  app.py  install.sh  main.py  pyproject.toml  requirements.txt  run_backend.sh  run_frontend.sh  streamlit_app.py
.history/: README_20251112163042.md  README_20251112163102.md
.history/backend/agents/: brand_extractor_20251112162759.py  brand_extractor_20251112163136.py  tools_20251112162700.py
.history/backend/app/: image_generator_20251112162916.py  image_generator_20251112163138.py  main_20251112163008.py  main_20251112163124.py
backend/agents/: __init__.py  brand_extractor.py  prompt_crafter.py  prompt_template.py  tools.py
backend/app/: image_generator.py  logger.py  main.py  models.py
frontend/: app.py
