[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "brandinator"
version = "0.1.0"
description = "Brand Extraction Agent + On-Brand Image Generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.2",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0",
    "beautifulsoup4>=4.12.2",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "pillow>=10.1.0",
    "colorthief>=0.2.1",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
backend = "backend.app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
